[project]
name = "fivem-esx-qb-converter"
version = "3.0.0"
description = "Convert FiveM Lua scripts between ESX and QB-Core frameworks"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "David Tanasescu"},
]
dependencies = [
    "nicegui>=1.4.0",
]

[project.scripts]
fivem-converter = "main:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
